[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/tool.gd" type="Script" id=1]
[ext_resource path="res://textures/tools/KnifeTool.png" type="Texture" id=2]

[node name="KnifeTool" type="Node2D" groups=["tool"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.878431, 0.768627, 0.443137, 1 )
texture = ExtResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="OuterCollision" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( 12, 2, 11, 2, 10, 2, 9, 2, 8, 2, 7, 2, 6, 2, 5, 2, 4, 2, 3, 2, 2, 2, 1, 2, 0, 2, -1, 2, -2, 2, -3, 2, -4, 2, -5, 2, -6, 2, -6, 1, -8, 1, -8, 0, -10, 0, -10, -1, -11, -1, -12, -1, -12, -2, -11, -2, -10, -2, -9, -2, -8, -2, -7, -2, -6, -2, -5, -2, -4, -2, -3, -2, -2, -2, -1, -2, 0, -2, 1, -2, 2, -2, 3, -2, 4, -2, 5, -2, 6, -2, 7, -2, 8, -2, 9, -2, 10, -2, 11, -2, 12, -2, 12, -1, 12, 0, 12, 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = -12.0
margin_top = -2.0
margin_right = 12.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="ReferenceRect" to="." method="_on_ReferenceRect_gui_input"]
